@@ -187,7 +187,9 @@ xfrd_init(int socket, struct nsd* nsd, int shortsoa, int reload_active)
 	DEBUG(DEBUG_XFRD,1, (LOG_INFO, "xfrd pre-startup"));
 	xfrd_init_zones();
 	xfrd_receive_soa(socket, shortsoa);
-	xfrd_read_state(xfrd);
+	/* in nodb mode, we need not use state because we refresh anyway */
+	if(nsd->options->database != NULL && nsd->options->database[0]!=0)
+		xfrd_read_state(xfrd);
 
 	DEBUG(DEBUG_XFRD,1, (LOG_INFO, "xfrd startup"));
 	xfrd_main();
@@ -280,7 +282,8 @@ xfrd_shutdown()
 	DEBUG(DEBUG_XFRD,1, (LOG_INFO, "xfrd shutdown"));
 	event_del(&xfrd->ipc_handler);
 	close(xfrd->ipc_handler.ev_fd); /* notifies parent we stop */
-	xfrd_write_state(xfrd);
+	if(xfrd->nsd->options->database != NULL && xfrd->nsd->options->database[0]!=0)
+		xfrd_write_state(xfrd);
 	if(xfrd->reload_added) {
 		event_del(&xfrd->reload_handler);
 		xfrd->reload_added = 0;
